# crinj

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md  ca.go  ca_test.go  flake.nix  gateway.go  gateway_h2.go  gateway_h2_test.go  gateway_oauth_test.go  gateway_test.go  glob.go  glob_test.go  go.mod  go.sum  inject.go  inject_test.go  jwt.go  jwt_config_test.go  jwt_engine_test.go  jwt_test.go  local.go  local_test.go  main.go  main_test.go  oauth.go  oauth_config_test.go  oauth_test.go  vault.go  vault_test.go
src/: ca.rs  gateway.rs  glob.rs  inject.rs  local.rs  main.rs
